@@ -178,13 +178,21 @@
 0
 0.000050
   0.000000
-b
-b
-a
-a
-[1.00]
+[    1     2     3]
 
-[2.00]
+[    4     5     6]
+
+[    7     8     9]
+[ 1.00  2.00  3.00]
+
+[ 4.00  5.00  6.00]
+
+[ 7.00  8.00  9.00]
+b
+b
+a
+a
+[1.00 2.00]
   ***   at top-level: printf("%c",'x)
   ***                 ^---------------
   *** printf: incorrect type in gtolong (t_POL).
@@ -196,4 +204,4 @@ a
 [5 1]
 
 [7 1]
-Total time spent: 2
+Total time spent: 1
